Refactored system for signle user to handle assigned user as the loggedin user
