# backend/docs/swagger.yaml
@@ -171,58 +171,6 @@ paths:
         '200':
           description: Task deleted
 
-  /users:
-    get:
-      summary: Get all users
-      tags:
-        - Users
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
-          description: List of users
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    _id:
-                      type: string
-                    name:
-                      type: string
-                    email:
-                      type: string
-
-  /users/{id}:
-    get:
-      summary: Get a single user by ID
-      tags:
-        - Users
-      security:
-        - bearerAuth: []
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Returns a user
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  _id:
-                    type: string
-                  name:
-                    type: string
-                  email:
-                    type: string
-
 components:
   securitySchemes:
     bearerAuth:
